Added maxheight and scrollbar to all window content (including contact list), not just on message windows

--- a/application.css
+++ b/application.css
@@ -45,12 +45,19 @@
 	width: 200px;
 	font-size: 8pt;
 	font-family: Arial;
-}
 
-.zxmpp_content_msg {
 	max-height: 150px;
 	overflow: auto;
 }
+
+/*.zxmpp_content_msg {
+	max-height: 150px;
+	overflow: auto;
+}
+.zxmpp_content_contacts {
+	max-height: 150px;
+	overflow: auto;
+}*/
 
 .zxmpp_user {
 	border: 1px solid #ccc;
