--- a/application.css
+++ b/application.css
@@ -1,3 +1,16 @@
+/*
+ * Z-XMPP
+ * A Javascript XMPP client.
+ *
+ * (c) 2010 Matija Folnovic
+ * (c) 2010 Ivan Vucica
+ * License is located in the LICENSE file
+ * in Z-XMPP distribution/repository.
+ * Use not complying to those terms is a
+ * violation of various national and
+ * international copyright laws.
+ */
+
 .zxmpp_bar {
 	position: fixed;
 	bottom: 0px;
