Received chat states from XEP-0085 are stored in message stanza class. Chat state is displayed in the UI if typing. When last character is deleted with backspace, only then state is switched to inactive. UI now works better with messageStanzaReceived, and deprecates messageReceived. Switched to sending 'paused' instead of 'inactive'.

--- a/application.css
+++ b/application.css
@@ -63,6 +63,12 @@
 	overflow: auto;
 }
 
+.zxmpp_window_msg_composing .zxmpp_content .zxmpp_content_msg:after
+{
+	font-weight: bold;
+	content: "Typing";
+}
+
 .zxmpp_user {
 	border: 1px solid #ccc;
 	background: #ccc;
