Improved XML parsing of <message>s (and improved easierAttrs utility function to handle namespaces) in order to improve compatibility with Google Talk. Aside from displaying state 'composing', now displaying some other states as well.

--- a/application.css
+++ b/application.css
@@ -68,6 +68,16 @@
 	font-weight: bold;
 	content: "Typing";
 }
+.zxmpp_window_msg_paused .zxmpp_content .zxmpp_content_msg:after
+{
+	font-weight: bold;
+	content: "Thinking";
+}
+.zxmpp_window_msg_gone .zxmpp_content .zxmpp_content_msg:after
+{
+	font-weight: bold;
+	content: "Gone";
+}
 
 .zxmpp_user {
 	border: 1px solid #ccc;
